force-app/main/default/objects/Lead_Dispatch__c/Lead_Dispatch__c.object-meta.xml
<CustomObject>
    <label>Lead Dispatch</label>
    <nameField>
        <displayFormat>LD-{000000}</displayFormat>
        <label>Lead Dispatch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Dispatches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>