force-app/main/default/objects/Lead_Dispatch__c/fields/Created_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Created_DateTime__c</fullName>
    <description>IF(Dispatch_Date__c != null,IF(ISNUMBER(LEFT(Dispatch_Date__c,4)),DATETIMEVALUE(Dispatch_Date__c),IF(LEN(Dispatch_Date__c) = 16,
      DATETIMEVALUE(MID(Dispatch_Date__c,7,4)+&apos;-&apos;+MID(Dispatch_Date__c, 4, 2)+&apos;-&apos;+LEFT(Dispatch_Date__c,2)
        +&apos; &apos;+RIGHT(Dispatch_Date__c,5)+&apos;:00&apos;) - (330/1440),
      DATETIMEVALUE(MID(Dispatch_Date__c,7,4)+&apos;-&apos;+MID(Dispatch_Date__c, 4, 2)+&apos;-&apos;+LEFT(Dispatch_Date__c,2)
        +&apos; &apos;+&apos;0&apos;+RIGHT(Dispatch_Date__c,4)+&apos;:00&apos;) - (330/1440)
    ))
   ,
    CreatedDate)</description>
    <formula>IF(Dispatch_Date__c != null,IF(ISNUMBER(LEFT(Dispatch_Date__c,4)),DATETIMEVALUE(Dispatch_Date__c)- (330/1440),IF(LEN(Dispatch_Date__c) = 16,
      DATETIMEVALUE(MID(Dispatch_Date__c,7,4)+&apos;-&apos;+MID(Dispatch_Date__c, 4, 2)+&apos;-&apos;+LEFT(Dispatch_Date__c,2)
        +&apos; &apos;+RIGHT(Dispatch_Date__c,5)+&apos;:00&apos;) - (330/1440),
      DATETIMEVALUE(MID(Dispatch_Date__c,7,4)+&apos;-&apos;+MID(Dispatch_Date__c, 4, 2)+&apos;-&apos;+LEFT(Dispatch_Date__c,2)
        +&apos; &apos;+&apos;0&apos;+RIGHT(Dispatch_Date__c,4)+&apos;:00&apos;) - (330/1440)
    ))
   ,
    CreatedDate)</formula>
    <label>Created DateTime</label>
    <type>DateTime</type>
</CustomField>