force-app/main/default/objects/Lead_Dispatch__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lead Dispatches</relationshipLabel>
    <relationshipName>Lead_Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>