force-app/main/default/objects/Lead_Dispatch__c/fields/Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date__c</fullName>
    <label>Dispatch Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>