force-app/main/default/objects/Lead_Dispatch__c/fields/Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Employee_Type__c</fullName>
    <label>Employee Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>