force-app/main/default/objects/Lead_Dispatch__c/fields/Ext_warranty_number__c.field-meta.xml
<CustomField>
    <fullName>Ext_warranty_number__c</fullName>
    <label>Ext. warranty number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>