force-app/main/default/objects/Lead_Dispatch__c/fields/Ext_warranty_sold_date__c.field-meta.xml
<CustomField>
    <fullName>Ext_warranty_sold_date__c</fullName>
    <label>Ext. warranty sold date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>