force-app/main/default/objects/Lead_Dispatch__c/fields/Ext_warranty_start_kilometre__c.field-meta.xml
<CustomField>
    <fullName>Ext_warranty_start_kilometre__c</fullName>
    <label>Ext. warranty start kilometre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>