force-app/main/default/objects/Lead_Dispatch__c/fields/Followup_Comments__c.field-meta.xml
<CustomField>
    <fullName>Followup_Comments__c</fullName>
    <label>Followup Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>