force-app/main/default/objects/Lead_Dispatch__c/fields/Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Followup_Date__c</fullName>
    <label>Followup Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>