force-app/main/default/objects/Lead_Dispatch__c/fields/Key_UsedInCode__c.field-meta.xml
<CustomField>
    <fullName>Key_UsedInCode__c</fullName>
    <label>Key_UsedInCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>