force-app/main/default/objects/Lead_Dispatch__c/fields/Kms__c.field-meta.xml
<CustomField>
    <fullName>Kms__c</fullName>
    <formula>Product__r.Kilometer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>