force-app/main/default/objects/Lead_Dispatch__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Dispatches</relationshipLabel>
    <relationshipName>Lead_Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>