force-app/main/default/objects/Lead_Dispatch__c/fields/Lead_LMS_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_LMS_Id__c</fullName>
    <label>Lead LMS Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>