force-app/main/default/objects/Lead_Dispatch__c/fields/Lead_Private_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Private_Id__c</fullName>
    <externalId>true</externalId>
    <label>Lead Private Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>