force-app/main/default/objects/Lead_Dispatch__c/fields/Lead_Source_Dealer_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Dealer_Id__c</fullName>
    <label>Lead Source Dealer Id</label>
    <length>155</length>
    <type>Text</type>
</CustomField>