force-app/main/default/objects/Lead_Dispatch__c/fields/Lms_Dispatch_Id__c.field-meta.xml
<CustomField>
    <fullName>Lms_Dispatch_Id__c</fullName>
    <externalId>true</externalId>
    <label>Lms Dispatch Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>