force-app/main/default/objects/Lead_Dispatch__c/fields/Mfg_Month__c.field-meta.xml
<CustomField>
    <fullName>Mfg_Month__c</fullName>
    <formula>Product__r.Model_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mfg Month</label>
    <type>Text</type>
</CustomField>