force-app/main/default/objects/Lead_Dispatch__c/fields/Mfg_Year__c.field-meta.xml
<CustomField>
    <fullName>Mfg_Year__c</fullName>
    <formula>Product__r.Model_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mfg Year</label>
    <type>Text</type>
</CustomField>