force-app/main/default/objects/Lead_Dispatch__c/fields/Primary_Make__c.field-meta.xml
<CustomField>
    <fullName>Primary_Make__c</fullName>
    <label>Primary Make</label>
    <length>155</length>
    <type>Text</type>
</CustomField>