force-app/main/default/objects/Lead_Dispatch__c/fields/Primary_Model__c.field-meta.xml
<CustomField>
    <fullName>Primary_Model__c</fullName>
    <label>Primary Model</label>
    <length>155</length>
    <type>Text</type>
</CustomField>