force-app/main/default/objects/Lead_Dispatch__c/fields/Primary_Variant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Variant__c</fullName>
    <label>Primary Variant</label>
    <length>155</length>
    <type>Text</type>
</CustomField>