force-app/main/default/objects/Lead_Dispatch__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Lead Dispatches</relationshipLabel>
    <relationshipName>Lead_Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>