force-app/main/default/objects/Lead_Dispatch__c/fields/Register_City__c.field-meta.xml
<CustomField>
    <fullName>Register_City__c</fullName>
    <formula>Product__r.Registration_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Register City</label>
    <type>Text</type>
</CustomField>