force-app/main/default/objects/Lead_Dispatch__c/fields/Register_Month__c.field-meta.xml
<CustomField>
    <fullName>Register_Month__c</fullName>
    <formula>TEXT(MONTH(DATEVALUE (Product__r.Registration_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Register Month</label>
    <type>Text</type>
</CustomField>