force-app/main/default/objects/Lead_Dispatch__c/fields/Register_No__c.field-meta.xml
<CustomField>
    <fullName>Register_No__c</fullName>
    <formula>Product__r.Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Register No</label>
    <type>Text</type>
</CustomField>