force-app/main/default/objects/Lead_Dispatch__c/fields/Register_Year__c.field-meta.xml
<CustomField>
    <fullName>Register_Year__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE( Product__r.Registration_Date__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Register Year</label>
    <type>Text</type>
</CustomField>