force-app/main/default/objects/Lead_Dispatch__c/fields/Secondary_Make__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Make__c</fullName>
    <label>Secondary Make</label>
    <length>155</length>
    <type>Text</type>
</CustomField>