force-app/main/default/objects/Lead_Dispatch__c/fields/Secondary_Model__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Model__c</fullName>
    <label>Secondary Model</label>
    <length>155</length>
    <type>Text</type>
</CustomField>