force-app/main/default/objects/Lead_Dispatch__c/fields/Secondary_Variant__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Variant__c</fullName>
    <label>Secondary Variant</label>
    <length>155</length>
    <type>Text</type>
</CustomField>