force-app/main/default/objects/Lead_Dispatch__c/fields/Sold_Color__c.field-meta.xml
<CustomField>
    <fullName>Sold_Color__c</fullName>
    <label>Sold Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>