force-app/main/default/objects/Lead_Dispatch__c/fields/Sold_Kms__c.field-meta.xml
<CustomField>
    <fullName>Sold_Kms__c</fullName>
    <label>Sold Kms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>