force-app/main/default/objects/Lead_Dispatch__c/fields/Sold_Make__c.field-meta.xml
<CustomField>
    <fullName>Sold_Make__c</fullName>
    <label>Sold Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>