force-app/main/default/objects/Lead_Dispatch__c/fields/Sold_Model__c.field-meta.xml
<CustomField>
    <fullName>Sold_Model__c</fullName>
    <label>Sold Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>