force-app/main/default/objects/Lead_Dispatch__c/fields/Sold_Owner__c.field-meta.xml
<CustomField>
    <fullName>Sold_Owner__c</fullName>
    <label>Sold Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>