force-app/main/default/objects/Lead_Dispatch__c/fields/Sold_Register_Month__c.field-meta.xml
<CustomField>
    <fullName>Sold_Register_Month__c</fullName>
    <label>Sold Register Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>