force-app/main/default/objects/Lead_Dispatch__c/fields/Sold_Register_Year__c.field-meta.xml
<CustomField>
    <fullName>Sold_Register_Year__c</fullName>
    <label>Sold Register Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>