force-app/main/default/objects/Lead_Dispatch__c/fields/Sold_Stock_Type__c.field-meta.xml
<CustomField>
    <fullName>Sold_Stock_Type__c</fullName>
    <label>Sold Stock Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>