force-app/main/default/objects/Lead_Dispatch__c/fields/Sold_Variant__c.field-meta.xml
<CustomField>
    <fullName>Sold_Variant__c</fullName>
    <label>Sold Variant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>