force-app/main/default/objects/Lead_Dispatch__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SOLD</fullName>
            </value>
            <value>
                <fullName>follow up</fullName>
            </value>
            <value>
                <fullName>open</fullName>
            </value>
            <value>
                <fullName>saas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>