force-app/main/default/objects/Lead_Dispatch__c/fields/Status_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Status_Updated_By__c</fullName>
    <label>Status Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>