force-app/main/default/objects/Lead_Dispatch__c/fields/Stock_Color__c.field-meta.xml
<CustomField>
    <fullName>Stock_Color__c</fullName>
    <label>Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>