force-app/main/default/objects/Lead_Dispatch__c/fields/Stock_Listed_Price__c.field-meta.xml
<CustomField>
    <fullName>Stock_Listed_Price__c</fullName>
    <formula>Product__r.Expected_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Listed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>