force-app/main/default/objects/Lead_Dispatch__c/fields/Stock_Type__c.field-meta.xml
<CustomField>
    <fullName>Stock_Type__c</fullName>
    <label>Stock Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>