force-app/main/default/objects/Lead_Dispatch__c/fields/Target_Source__c.field-meta.xml
<CustomField>
    <fullName>Target_Source__c</fullName>
    <label>Target Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>