force-app/main/default/objects/Lead_Dispatch__c/fields/Warrant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Amount__c</fullName>
    <label>Warrant Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>