force-app/main/default/objects/Lead_Dispatch__c/fields/Warranty_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Cancelled__c</fullName>
    <label>Warranty Cancelled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>