force-app/main/default/objects/Lead_Dispatch__c/fields/Warranty_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_End_Date__c</fullName>
    <label>Warranty End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>