force-app/main/default/objects/Lead_Dispatch__c/fields/Warranty_Punched_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Punched_Date__c</fullName>
    <label>Warranty Punched Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>