force-app/main/default/objects/Lead_Dispatch__c/fields/Warranty_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Start_Date__c</fullName>
    <label>Warranty Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>