force-app/main/default/objects/Lead_Dispatch__c/fields/Warranty_Type__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Type__c</fullName>
    <label>Warranty Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>