force-app/main/default/objects/Lead_Dispatch__c/validationRules/Check_for_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Lead</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Lead__c)</errorConditionFormula>
    <errorDisplayField>Lead__c</errorDisplayField>
    <errorMessage>Lead Dispatch cannot be created without Lead</errorMessage>
</ValidationRule>